// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox renders 1`] = `
<label
  className="CheckboxLabel-wyw1pu-0 glYria"
>
  <input
    className="CheckboxInput-sc-12uz9za-0 cvIerI"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="CheckboxIconWrapper__Wrapper-sc-1rg3c8n-0 pvcCn"
  >
    <span
      className="CheckboxIconWrapper__Box-sc-1rg3c8n-1 bxkBNs"
    >
      <div
        checked={false}
        className="CheckboxIconWrapper__Animation-sc-1rg3c8n-2 hFEvHO"
      />
    </span>
    <p
      className="Text-oby56-0 kYNaRa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Checked 1`] = `
<label
  className="CheckboxLabel-wyw1pu-0 glYria"
>
  <input
    checked={true}
    className="CheckboxInput-sc-12uz9za-0 cvIerI"
    onClick={[Function]}
    readOnly={true}
    type="checkbox"
  />
  <div
    className="CheckboxIconWrapper__Wrapper-sc-1rg3c8n-0 pvcCn"
  >
    <span
      className="CheckboxIconWrapper__Box-sc-1rg3c8n-1 bxkBNs"
    >
      <div
        checked={true}
        className="CheckboxIconWrapper__Animation-sc-1rg3c8n-2 esFemD"
      />
    </span>
    <p
      className="Text-oby56-0 kYNaRa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders Disabled 1`] = `
<label
  className="CheckboxLabel-wyw1pu-0 glYria"
>
  <input
    className="CheckboxInput-sc-12uz9za-0 cvIerI"
    disabled={true}
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="CheckboxIconWrapper__Wrapper-sc-1rg3c8n-0 pvcCn"
  >
    <span
      className="CheckboxIconWrapper__Box-sc-1rg3c8n-1 bxkBNs"
    >
      <div
        checked={false}
        className="CheckboxIconWrapper__Animation-sc-1rg3c8n-2 hFEvHO"
      />
    </span>
    <p
      className="Text-oby56-0 kYNaRa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
  </div>
</label>
`;

exports[`Checkbox renders No label 1`] = `
<label
  className="CheckboxLabel-wyw1pu-0 glYria"
>
  <input
    className="CheckboxInput-sc-12uz9za-0 cvIerI"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="CheckboxIconWrapper__Wrapper-sc-1rg3c8n-0 pvcCn"
  >
    <span
      className="CheckboxIconWrapper__Box-sc-1rg3c8n-1 bxkBNs"
    >
      <div
        checked={false}
        className="CheckboxIconWrapper__Animation-sc-1rg3c8n-2 hFEvHO"
      />
    </span>
  </div>
</label>
`;

exports[`Checkbox renders Reverse direction 1`] = `
<label
  className="CheckboxLabel-wyw1pu-0 glYria"
>
  <input
    className="CheckboxInput-sc-12uz9za-0 cvIerI"
    onClick={[Function]}
    type="checkbox"
  />
  <div
    className="CheckboxIconWrapper__Wrapper-sc-1rg3c8n-0 pvcCn"
  >
    <p
      className="Text-oby56-0 kYNaRa"
      color="bulma.100"
      size={14}
    >
      I agree to receive bonus & marketing emails.
    </p>
    <span
      className="CheckboxIconWrapper__Box-sc-1rg3c8n-1 bxkBNs"
    >
      <div
        checked={false}
        className="CheckboxIconWrapper__Animation-sc-1rg3c8n-2 hFEvHO"
      />
    </span>
  </div>
</label>
`;
